[package]
name = "iot-snapshot"
version = "0.1.0"
authors = ["Guillaume de Boyer-Montegut <gdeboyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }

redis = "0.11.0"
rand = "0.7.0"
serde_json = "1.0"